--- a/BlazorProject.Client/Pages/Pokemons/Pokemons.razor
+++ b/BlazorProject.Client/Pages/Pokemons/Pokemons.razor
@@ -39,7 +39,7 @@
                 <PokemonStatsComponent Stats=@Pokemon.Stats MaxStats=@MaxStats/>
             </div>
             <div class="col-5">
-                @*<TypeDefenses TypeEfficacies=@Pokemon.PokemonTypeEfficacy />*@
+                <TypeDefenses TypeEfficacies=@Pokemon.Efficacies />
             </div>
         </div>
 
