--- a/BlazorProject.Client/wwwroot/css/site.css
+++ b/BlazorProject.Client/wwwroot/css/site.css
@@ -62,3 +62,10 @@ html, body {
         border-style: solid;
         border-color: black transparent transparent transparent;
     }
+
+.disable-select {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
