--- a/BlazorProject.Client/Pages/Pokemons/EvolutionChain.razor
+++ b/BlazorProject.Client/Pages/Pokemons/EvolutionChain.razor
@@ -19,7 +19,7 @@
         }
         <div class="col-2">
             <div class="row justify-content-center align-items-center">
-                <PokemonImage PokemonId=@chain.Id IsSprite=true Gen=@chain.SpeciesGenerationName />
+                <PokemonImage PokemonId=@chain.Id IsSprite=true Gen=@chain.Generation />
             </div>
         </div>
     }
