--- a/BlazorProject.Client/Pages/Pokemons/EvolutionChain.razor
+++ b/BlazorProject.Client/Pages/Pokemons/EvolutionChain.razor
@@ -19,22 +19,7 @@
         }
         <div class="col-2">
             <div class="row justify-content-center align-items-center">
-                <PokemonImage PokemonId=@chain.Id IsSprite=true Gen=@chain.Generation />
-            </div>
-        </div>
-    }
-</div>
-<div class="row justify-content-center text-center align-items-center">
-    @foreach (var chain in EvolutionChainList)
-    {
-        <div class="col-2 @(chain != FirstFromChain ? "offset-1" : "")">
-            <div class="text-muted">
-                #@chain.Id.ToString().PadLeft(3, '0')
-            </div>
-            <div>
-                <button style="padding:0px;" class="btn btn-link" type="button">
-                    <strong>@chain.Name.FirstCharToUpper()</strong>
-                </button>
+                <PokemonImage PokemonId=@chain.Id PokemonName=@chain.Name IsSmall=true Gen=@chain.Generation />
             </div>
         </div>
     }
