- deixando as telas responsivas - refatorações

--- a/BlazorProject.Client/Pages/Pokemons/Efficacy.razor
+++ b/BlazorProject.Client/Pages/Pokemons/Efficacy.razor
@@ -1,7 +1,7 @@
 ﻿@if (!EfficacyIsNeutral(Multiplier))
 {
     <button class="pokemon-type"
-            style="background-color:@EfficacyColor[Multiplier]; width:40px;"
+            style="background-color:@EfficacyColor[Multiplier]; width:95%;"
             disabled
             type="button">
         @Multiplier
