--- a/BlazorProject.Client/Pages/Pokemons/MovesList/PokemonMove.razor
+++ b/BlazorProject.Client/Pages/Pokemons/MovesList/PokemonMove.razor
@@ -4,7 +4,7 @@
 
 <h2 class="mb-3">Moves</h2>
 <div class="row">
-    <div class="col-6">
+    <div class="col-xl-6 col-lg-12">
         <div class="row">
             @foreach (var groupList in FirstHalf)
             {
@@ -12,7 +12,7 @@
             }
         </div>
     </div>
-    <div class="col-6">
+    <div class="col-xl-6 col-lg-12">
         <div class="row">
             @foreach (var groupList in SecondHalf)
             {
@@ -42,7 +42,6 @@ protected override void OnInit()
 }
 protected override void OnParametersSet()
 {
-    Console.WriteLine(PokemonMovesList.ToList().Count);
     var subGroups = PokemonMovesList
       .GroupBy(p => p.LearnMethods)
       .OrderBy(s => new List<string> { "level-up", "egg", "machine", "tutor" }.IndexOf(s.Key));
