--- a/BlazorProject.Client/Shared/MainLayout.razor
+++ b/BlazorProject.Client/Shared/MainLayout.razor
@@ -1,6 +1,5 @@
 ﻿@inherits LayoutComponentBase
 @inject IUriHelper UriHelper
-@using BlazorProject.Client.Pages.Pokemons
 <div class="container-fluid">
     <div class="row">
         <div class="col">
@@ -12,7 +11,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" @onclick=@(() => UriHelper.NavigateTo("pokedex"))>Home<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" @onclick=@(() => UriHelper.NavigateTo("pokedex"))>Pokédex<span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
                 </div>
